@@ -58,6 +58,7 @@ FCLIBS_XTRA = @FCLIBS_XTRA@
 FFLAGS = @FFLAGS@ $(LTO_FC)
 FLIBS = @FLIBS_IN_SO@
 FPICFLAGS = @FPICFLAGS@
+FPIEFLAGS = @FPIEFLAGS@
 FOUNDATION_CPPFLAGS = @FOUNDATION_CPPFLAGS@
 FOUNDATION_LIBS = @FOUNDATION_LIBS@
 JAR = @JAR@
